Add jekyll mapping

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Nolan Can Read
 ---
+{% render_index_map %}
 
 <div class="home" id="home">
 	<h1 class="pageTitle">Recent Posts</h1>
