--- a/map.html
+++ b/map.html
@@ -6,3 +6,8 @@ title: Nolan Can Read a Map
   <a href="%{link}">%{title}</a><br/><i>%{author}</i>
 {% endrender_index_map %}
 {% include jekyll_mapping.html %}
+
+
+<ul class="tree">
+  {% location_tree %}
+</ul>
